NOCC 1.3    ?? ??, 200?

  Bugs
    * Bug #1598813 : file "prefs_error.php" seems unneeded (Arnaud Boudou).
    * Bug #1581966 : Bold tag instead of strong tag in pt-br.php (Arnaud
      Boudou).
    * Bug #1579997 : Download mail, illegal characters in filename on save
      (Arnaud Boudou).
    * Bug #1578946 : Image tags of smiley's not XHTML 1.1 (Arnaud Boudou).
    * Bug #1578017 : down_mail.php don't work with IE (Arnaud Boudou).
    * Bug #1576418 : imap_open(): Couldn't open stream in down_mail.php (Arnaud
      Boudou).
    * Bug #1566972 : Needless if statement in "html_top_table.php"? (Arnaud
      Boudou).
    * Bug #1565973 : More mixed EOL in some files (Arnaud Boudou).
    * Bug #1565100 : Mixed EOL in html/send.php (Arnaud Boudou).
    * Bug #1565082 : Logout.php use empty theme (Arnaud Boudou).
    * Bug #1555543 : Some small spelling errors in en.php (Arnaud Boudou).
    * Bug #1552568 : Setting wrap None is not shown as selected (Arnaud Boudou).
    * Bug #1551529 : $html_to occurs twice in language files (Arnaud Boudou).
    * Bug #1550843 : Move and Copy buttons of top row in Inbox don't work
      (Arnaud Boudou).
    * Bug #1550133 : Some pages do not validate as XHTML 1.1 (Arnaud Boudou).
    * Bug #1549545 : Extra slash introduced by Back link on error page (Arnaud
      Boudou).
    * Bug #1547166 : errorpage: wrong images URL's and misbehaving back button
      (Arnaud Boudou).
    * Bug #1526431 : Java script error in IE on delete (Arnaud Boudou).
    * Bug #1524048 : Session Data Gets Mangled / NoccKey and NoccIdent (Arnaud
      Boudou).
    * Bug #1524044 : SMTP Auth Failures mishandled (Arnaud Boudou).
    * Bug #1518887 : errors when enable preferences (Arnaud Boudou).

  Patches
    * Patch #1600416 : Split 'from' column internally (Tim Gerundt).
    * Patch #1590397 : login_with_domain not checked correctly (Tim Gerundt).
    * Patch #1583460 : Add '...' after cutted mail data (Tim Gerundt).