@@ -1,6 +1,8 @@
 NOCC 1.3    ?? ??, 200?
 
   Bugs
+    * Bug #1611537 : Confusing for-loops in functions.php:GetPart() (Arnaud
+      Boudou).
     * Bug #1598813 : file "prefs_error.php" seems unneeded (Arnaud Boudou).
     * Bug #1581966 : Bold tag instead of strong tag in pt-br.php (Arnaud
       Boudou).
